load-tests/ftp_pubsub/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftp_pubsub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: simple-producer
                port:
                  number: 9100
